--- a/netflix-clone/index.html
+++ b/netflix-clone/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
@@ -15,18 +16,14 @@
     <div id="app">
         <nav>
             <div id="menu">
-                <img src="./logo.png" height="80" />
+                <img src="./img/logo.png" height="80" />
                 <ul>
                     <li>TV Shows</li>
                     <li>Movies</li>
                 </ul>
-                <select name="categories">
+                <select name="categories" id="categories">
             <option disabled selected>Categories</option>
-            <option value="1">My List</option>
-            <option value="1">Action</option>
-            <option value="1">Anime</option>
-            <option value="1">Blockbusters</option>
-            <option value="1">Children & Family</option>
+          
           </select>
             </div>
         </nav>
@@ -40,36 +37,29 @@
             </div>
             <div id="categories-group">
                 <h3>My List</h3>
-                <div class="covers-containers">
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
+                <div class="covers-containers" id="lista">
+
                 </div>
                 <h3>Most Popular</h3>
-                <div class="covers-containers">
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
+                <div class="covers-containers" id="popular">
+
                 </div>
                 <h3>Category 1</h3>
                 <div class="covers-containers">
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
-                    <img src="./cover.jpg" alt="" />
+                    <img src="./img/cover.jpg" alt="" />
+                    <img src="./img/cover.jpg" alt="" />
+                    <img src="./img/cover.jpg" alt="" />
+                    <img src="./img/cover.jpg" alt="" />
+                    <img src="./img/cover.jpg" alt="" />
+                    <img src="./img/cover.jpg" alt="" />
                 </div>
             </div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="./JS/main.js"></script>
+    <script src="./JS/select.js"></script>
+    <script src="./JS/popular.js"></script>
+    <script src="./JS/lista.js"></script>
 </body>
 
 </html>
